another big one, fixed js observing the collection for updates (reactivity) - while being dynamic enough to support the horizontal wizardy I came up with that meteor did not like.  Fixed guest image sizing, truncated things that might cause overflow issues.  12am bug issue (current hour highlight) fixed.  Got Mr and Ms back in the app.  I think the centering of the screen on the hour is about as good as it is going to get.  It is not perfect but this is prototype/pilot software and should be treated as such.  closes #24; closes #23; closes #22; closes #19; closes #15;

--- a/client/css/mosaic.css
+++ b/client/css/mosaic.css
@@ -170,7 +170,8 @@ html, body {
 	user-select: none;
 }
 .guestThumbTimeline {
-	width: 50px;
+	width: 70px;
+	height: 70px;
 }
 .guestTimelineEnclosure{
 	border: 1px solid #232521;
@@ -210,4 +211,16 @@ html, body {
 }
 #addGuestButton{
 	margin-left: -60px;
+}
+img {
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  vertical-align: middle;
+  border: 0;
+  -ms-interpolation-mode: bicubic;
+}
+.guestTimelineName{
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
